--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,18 @@ spring.datasource.username=root
 spring.datasource.password=1234
 # 4. JPA DDL ì ëí´ ìµì
 #       1. ìë² ì¼ì§ë DDL ìì±ì¬ë¶
-spring.jpa.hibernate.ddl-auto=create
 
+spring.jpa.hibernate.ddl-auto=create
+# spring.jpa.hibernate.ddl-auto=update
 # create = Table Create
 # update = Table field update(create only, delete field X)
 
 # create database springweb2;
+
+# 5. When we're looking for Result of JPA-using-SQL, then console.log(Result)
+# Usage of Work-test ( distribution -> delete or annotation )
+spring.jpa.properties.hibernate.show_sql=true
+
+# 6. Result, then that's Entered;
+# Usage of Work-test ( distribution -> delete or annotation )
+spring.jpa.properties.hibernate.format_sql= true
