--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,7 @@ spring.jpa.properties.hibernate.show_sql=true
 # 6. Result, then that's Entered;
 # Usage of Work-test ( distribution -> delete or annotation )
 spring.jpa.properties.hibernate.format_sql= true
+
+# Usage of Work-test (DB Sample Data)
+spring.sql.init.mode = always
+spring.jpa.defer-datasource-initialization= true
