--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // jpa
     runtimeOnly 'com.mysql:mysql-connector-j' // mysql jdbc
 
+    implementation 'org.springframework.boot:spring-boot-starter-websocket' // websocket
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 }
